# minispeech_onnx

./: .gitignore  LICENSE  README.md  SPECTROGRAMS.md  pyproject.toml  spectrograms.html  synth.sh  synth_onnx.py
enc_onnx/: enc_d128_encoder_slim_fp16.onnx  enc_d64_encoder_slim_fp16.onnx  enc_d96_encoder_slim_fp16.onnx
tools/: gen_demos.py  gen_gallery_html.py  gen_gallery_md.py
vocoder_onnx/: hifigan_ch256_vocoder_slim_fp16.onnx  mbistft_n16_vocoder_slim_fp16.onnx  mbistft_n64_vocoder_slim_fp16.onnx  vocos_d128_n512_vocoder_slim_fp16.onnx  vocos_d64_n512_vocoder_slim_fp16.onnx
